--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel = "stylesheet" href ="main.css">
 </head>
 <body>
-  <h1> New Project </h1>
-  
+  <h1>Snake</h1>
+  <!-- <div id ="display">
+    <h2>Score</h2>
+    <p></p>
+  </div> -->
+
+  <div class = "grid"></div>
+
+  <div id = "buttons">
+    <button class = "play"> Play </button>
+    <button> Pause </button>
+  </div>
+
+  <script src = "snake.js"></script>
 </body>
 </html>
