--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
   <link rel = "stylesheet" href ="main.css">
 </head>
 <body>
-  <h1>Snake</h1>
-  <!-- <div id ="display">
-    <h2>Score</h2>
-    <p></p>
-  </div> -->
+  <h1>Grid Game: Snake</h1>
+ 
 
   <div class = "grid"></div>
 
   <div id = "buttons">
-    <button class = "play"> Play </button>
-    <button> Pause </button>
+    <button id = "play"> PLAY </button>
+  <!-- <button id = "pause"> Pause </button> -->
+    <!-- <button type = "reset" id = "reset">Reset</button>  -->
+    
   </div>
-
+  
   <script src = "snake.js"></script>
 </body>
 </html>
